--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}{{post.title}} - Blog Details{% endblock %}
 {% block content %}
 
   <!--================ Start Blog Post Area =================-->
