--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Sensive Blog - Contact{% endblock %}
 {% block content %}
 <!-- ================ contact section start ================= -->
   <section class="section-margin--small section-margin">
