--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Sensive Blog - Home{% endblock %}
 {% block content %}
     <!--================ Blog slider start =================-->
     <section>
