--- a/templates/index.html
+++ b/templates/index.html
@@ -1,101 +1,104 @@
 {% extends 'base.html' %}
 {% block title %}Sensive Blog - Home{% endblock %}
 {% block content %}
-    <!--================ Blog slider start =================-->
-    <section>
-        <div class="container">
-            <div class="d-flex">
-                {% for most_popular_post in most_popular_posts %}
-                    <div class="flex-fill" style="margin-right: 30px;">
-                        <div class="card blog__slide text-center">
-                            <div class="blog__slide__img">
-                                <img class="card-img rounded-0" src="{{ most_popular_post.image_url }}" alt="">
-                            </div>
-                            <div class="blog__slide__content">
-                                <h3><a href="#">{{ most_popular_post.title }}</a></h3>
-                                <p>{{ most_popular_post.published_at }}</p>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+<!--================ Blog slider start =================-->
+<section>
+  <div class="container">
+    <div class="d-flex">
+      {% for most_popular_post in most_popular_posts %}
+      <div class="flex-fill" style="margin-right: 30px;">
+        <div class="card blog__slide text-center">
+          <div class="blog__slide__img">
+            <img class="card-img rounded-0" src="{{ most_popular_post.image_url }}" alt="{{ most_popular_post.title }}">
+          </div>
+          <div class="blog__slide__content">
+            <h3><a href="#">{{ most_popular_post.title }}</a></h3>
+            <p>{{ most_popular_post.published_at }}</p>
+          </div>
         </div>
-    </section>
-    <!--================ Blog slider end =================-->
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</section>
+<!--================ Blog slider end =================-->
 
-    <!--================ Start Blog Post Area =================-->
-    <section class="blog-post-area section-margin mt-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    {% for fresh_post in fresh_posts %}
-                        <div class="single-recent-blog-post">
-                            <div class="thumb">
-                                <img class="img-fluid" src="{{ fresh_post.image_url }}" alt="{{ fresh_post.title }}">
-                                <ul class="thumb-info" style="max-width: 550px;">
-                                    <li><a href="#"><i class="ti-user"></i>{{ fresh_post.author }}</a></li>
-                                    <li><a href="#"><i class="ti-notepad"></i>{{ fresh_post.published_at }}</a></li>
-                                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_post.comments_amount }} Comments</a></li>
-                                </ul>
-                            </div>
-                            <div class="details mt-20">
-                                <h3>{{ fresh_post.title }}</h3>
-                                <p>{{ fresh_post.text|truncatechars:200}}/p>
-                                <a class="button" href="{% url 'post_detail' slug=fresh_post.slug %}">Read More <i class="ti-arrow-right"></i></a>
-                            </div>
-                        </div>
-                    {% endfor %}
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <nav class="blog-pagination justify-content-center d-flex">
-                                <ul class="pagination">
-                                    <li class="page-item">
-                                        <a href="#" class="page-link" aria-label="Previous">
+<!--================ Start Blog Post Area =================-->
+<section class="blog-post-area section-margin mt-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        {% for fresh_post in fresh_posts %}
+          <div class="single-recent-blog-post">
+            <div class="thumb">
+              {% if fresh_post.image_url %}
+                <img class="img-fluid" src="{{ fresh_post.image_url }}" alt="{{ fresh_post.title }}">
+              {% endif %}
+              <ul class="thumb-info" style="max-width: 550px;">
+                <li><a href="#"><i class="ti-user"></i>{{ fresh_post.author }}</a></li>
+                <li><a href="#"><i class="ti-notepad"></i>{{ fresh_post.published_at }}</a></li>
+                <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_post.comments_amount }} Comments</a></li>
+              </ul>
+            </div>
+            <div class="details mt-20">
+              <h3>{{ fresh_post.title }}</h3>
+              <p>{{ fresh_post.text|truncatechars:200}}/p>
+                <a class="button" href="{% url 'post_detail' slug=fresh_post.slug %}">Read More <i
+                  class="ti-arrow-right"></i></a>
+            </div>
+          </div>
+        {% endfor %}
+        <div class="row">
+          <div class="col-lg-12">
+            <nav class="blog-pagination justify-content-center d-flex">
+              <ul class="pagination">
+                <li class="page-item">
+                  <a href="#" class="page-link" aria-label="Previous">
                                   <span aria-hidden="true">
                                       <i class="ti-angle-left"></i>
                                   </span>
-                                        </a>
-                                    </li>
-                                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                                    <li class="page-item">
-                                        <a href="#" class="page-link" aria-label="Next">
+                  </a>
+                </li>
+                <li class="page-item active"><a href="#" class="page-link">1</a></li>
+                <li class="page-item"><a href="#" class="page-link">2</a></li>
+                <li class="page-item">
+                  <a href="#" class="page-link" aria-label="Next">
                                   <span aria-hidden="true">
                                       <i class="ti-angle-right"></i>
                                   </span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Start Blog Post Siddebar -->
-                <div class="col-lg-4 sidebar-widgets">
-                    <div class="widget-wrap">
-                        <div class="single-sidebar-widget newsletter-widget">
-                            <h4 class="single-sidebar-widget__title">Newsletter</h4>
-                            <div class="form-group mt-30">
-                                <div class="col-autos">
-                                    <input type="text" class="form-control" id="inlineFormInputGroup"
-                                           placeholder="Enter email" onfocus="this.placeholder = ''"
-                                           onblur="this.placeholder = 'Enter email'">
-                                </div>
-                            </div>
-                            <button class="bbtns d-block mt-20 w-100">Subcribe</button>
-                        </div>
-
-
-                        <div class="single-sidebar-widget post-category-widget">
-                            <h4 class="single-sidebar-widget" style="height:200px;">Здесь будет реклама</h4>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Blog Post Siddebar -->
-            </div>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-    </section>
-    <!--================ End Blog Post Area =================-->
+      </div>
+
+      <!-- Start Blog Post Siddebar -->
+      <div class="col-lg-4 sidebar-widgets">
+        <div class="widget-wrap">
+          <div class="single-sidebar-widget newsletter-widget">
+            <h4 class="single-sidebar-widget__title">Newsletter</h4>
+            <div class="form-group mt-30">
+              <div class="col-autos">
+                <input type="text" class="form-control" id="inlineFormInputGroup"
+                       placeholder="Enter email" onfocus="this.placeholder = ''"
+                       onblur="this.placeholder = 'Enter email'">
+              </div>
+            </div>
+            <button class="bbtns d-block mt-20 w-100">Subcribe</button>
+          </div>
+
+
+          <div class="single-sidebar-widget post-category-widget">
+            <h4 class="single-sidebar-widget" style="height:200px;">Здесь будет реклама</h4>
+          </div>
+        </div>
+      </div>
+      <!-- End Blog Post Siddebar -->
+    </div>
+  </div>
+</section>
+<!--================ End Blog Post Area =================-->
 </main>
 {% endblock %}
